cluster/services/blocky/route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api
  namespace: blocky
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`blocky.${DOMAIN_INTERNAL}`)
      services:
        - kind: Service
          name: blocky
          namespace: blocky
          port: 4000
      middlewares:
        - name: auth
          namespace: traefik
        - name: security
          namespace: traefik
        - name: error-pages
          namespace: traefik-errors
  tls:
    secretName: blocky.${DOMAIN_INTERNAL}
